# YANNL

./: .gitignore  CMakeLists.txt  README.md  yannl.sln  yannl.sln.startup.json
profiling/: profiling.cpp  profiling.vcxproj  profiling.vcxproj.filters
yannl/: ffnn.gtest.cpp  ffnn.hpp  yannl.cpp  yannl.vcxproj  yannl.vcxproj.filters
