cmake_minimum_required(VERSION 3.5)
project (m)
add_executable (myyannl yannl/ffnn.gtest.cpp)
add_library (libgtest_main STATIC IMPORTED)
add_library (libgtest STATIC IMPORTED)
set_target_properties ( libgtest_main PROPERTIES IMPORTED_LOCATION ${CMAKE_BINARY_DIR}/external/lib/libgtest_main.a ) 
set_target_properties ( libgtest PROPERTIES IMPORTED_LOCATION ${CMAKE_BINARY_DIR}/external/lib/libgtest.a )
include_directories ( ${CMAKE_BINARY_DIR}/external/include )
#SET ( CMAKE_PREFIX_PATH "${CMAKE_PREFIX_PATH} ${CMAKE_BINARY_DIR}/external/lib" )
#find_library (GTEST_LIB libgtest)
#find_library (GTEST_MAIN_LIB libgtest_main)
#TARGET_LINK_LIBRARIES(myyannl "${GTEST_MAIN_LIB}" "${GTEST_LIB}")
TARGET_LINK_LIBRARIES(myyannl libgtest libgtest_main)
SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -std=c++11" )
SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} -pthread" )
